Fixed spacing for comment tool

--- a/src/components/topbar/Topbar.module.css
+++ b/src/components/topbar/Topbar.module.css
@@ -19,8 +19,8 @@
 
 .toolbar > img {
   cursor: pointer;
-  width: 1.5vw;
-  height: 1.5vw;
+  width: 1.3vw;
+  height: 1.3vw;
 }
 
 .toolbar {
@@ -56,4 +56,8 @@ snippyly-huddle-tool {
 snippyly-presence {
   margin-top: 0.5vh;
   margin-left: 0.4vw;
+}
+
+snippyly-comment-tool {
+  margin-top: 0.8vh;
 }
